[package]
name = "billing_rust"
version = "0.1.0"
authors = ["流光 <67579722@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
termcolor = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql_async = "0.23.1"
